Fixed color picker z-index problem

--- a/public/css/addWidgetToolbar.css
+++ b/public/css/addWidgetToolbar.css
@@ -255,6 +255,7 @@ Portlet Creator
     left: 0;
     right: 0;
     background: inherit;
+    z-index: 2000;
 }
 input.bool-option-field,
 .bool-option-field {
